# evm-semantics

./: .ci  .gitattributes  .gitignore  .gitmodules  .kore-repl-history  .sessionCommands  Build  CLAUDE.md  CNAME  Dockerfile  INSTALL.md  Jenkinsfile  KRYPTO.ml  LICENSE  META  Makefile  PKGBUILD  README.md  VERIFICATION.md  _config.yml  abi.md  add-gas-spec.k  add-overflow-spec.k  add-spec.k  addition.evm  analysis.md  asm.md  blockchaintest  buf.md  cpp-gas-tiers  dasm.md  data.md  default.nix  doit  driver.md  edsl.md  edsl2.md  ethCall_lowBalance.dump.txt  ethereum.md  evm  (+99 more)
cmake/client/: CMakeLists.txt
cmake/node/: CMakeLists.txt
kevm-pyk/: .cruft.json  .flake8  .gitignore  Makefile  README.md  index.html  log  pyproject.toml  run.out
kevm-pyk/nix/: README.md  overlay.nix
kevm-pyk/nix/kevm-pyk/: default.nix
kevm-pyk/src/kevm_pyk/: __init__.py  __main__.py  cli.py  config.py  dist.py  foundry.py  gst_to_kore.py  interpret.py  interpreter.py  json_to_kast.py  kevm.py  kompile.py  options.py  solc_to_k.py  summarizer.py  utils.py
kevm-pyk/src/kevm_pyk/kdist/: __init__.py  __main__.py  _cache.py  _kdist.py  api.py  plugin.py  targets.py  utils.py
kevm-pyk/src/kevm_pyk/kproj/evm-semantics/: abi.md  asm.md  buf.md  data.md  driver.md  edsl-sum.md  edsl.md  evm-imp-specs.md  evm-types.md  evm.md  foundry.md  gas.md  hashed-locations.md  issues.md  json-rpc.md  network.md  optimizations.md  requests.md  schedule.md  serialization.md  state-utils.md  word.md
kevm-pyk/src/kevm_pyk/rpc/: client.py  controller.py  server.py
kevm-pyk/src/kevm_pyk/summaries/ADDMOD_3_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/ADDMOD_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/ADDRESS_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/ADDRESS_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/ADD_SPEC/: nohup.out  proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/ALL_SPEC/: proof-result.txt
kevm-pyk/src/kevm_pyk/summaries/AND_2_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/AND_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BALANCE_1_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BALANCE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BASEFEE_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BASEFEE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BLOCKHASH_1_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BLOCKHASH_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BYTE_2_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/BYTE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLCODE_7_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLCODE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLDATACOPY_3_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLDATACOPY_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLDATALOAD_1_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLDATALOAD_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLDATASIZE_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLDATASIZE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLER_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLER_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLVALUE_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALLVALUE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALL_7_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CALL_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CHAINID_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CHAINID_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CODECOPY_3_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CODECOPY_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CODESIZE_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CODESIZE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/COINBASE_0_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/COINBASE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CREATE2_4_SPEC/: summary.md
kevm-pyk/src/kevm_pyk/summaries/CREATE2_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CREATE_3_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/CREATE_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/DELEGATECALL_6_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/DELEGATECALL_SPEC/: proof-result.txt  summary.md
kevm-pyk/src/kevm_pyk/summaries/DIFFICULTY_0_SPEC/: proof-result.txt  (+1 more)
kevm-pyk/src/kontrol/: __main__.py  foundry.py  solc_to_k.py
kevm-pyk/src/kontrolx/: __main__.py  foundry.py  solc_to_k.py
kevm-pyk/src/tests/: conftest.py  test_kevm_pyk.py  utils.py
kevm-pyk/src/tests/integration/: conftest.py  test_conformance.py  test_execution_spec_tests.py  test_foundry_koverage.py  test_foundry_prove.py  test_integration.py  test_kast.py  test_prove.py  test_run.py  test_solc_to_k.py  test_summarize.py  utils.py
kevm-pyk/src/tests/profiling/: profile_gst_to_kore.py  pytest.ini  test_foundry_prove.py  test_gst_to_kore.py
kevm-pyk/src/tests/unit/: test_foundry_list.py  test_gst_to_kore.py  test_kevm.py  test_solc_to_k.py  test_toml_args.py  test_unit.py
kevm_pyk/: Makefile  __init__.py  __main__.py  pyproject.toml  set-version.sh  setup.cfg  setup.cfg.tmpl  solc_to_k.py  test-version.sh
kevm_pyk/nix/: overlay.nix
kevm_pyk/requirements/: base.txt  dev.txt
kevm_pyk/src/kevm_pyk/: __main__.py  gst_to_kore.py  kevm.py  solc_to_k.py  utils.py
(+2448 files in other folders)
