[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kevm-pyk"
version = "1.0.544"
description = ""
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
pathos = "*"
pyk = { git = "https://github.com/runtimeverification/k.git", tag="v7.0.44", subdirectory = "pyk" }
tomlkit = "^0.11.6"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
inotify = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "^7"
pytest-timeout = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"

[tool.poetry.scripts]
kevm = "kevm_pyk.__main__:main"
kevm-pyk = "kevm_pyk.__main__:main"
gst-to-kore = "kevm_pyk.gst_to_kore:main"

[tool.poetry.plugins.kdist]
evm-semantics = "kevm_pyk.kdist.plugin"

[tool.isort]
profile = "black"
line_length = 120
skip = [ "src/kevm_pyk/kproj" ]

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
exclude = [ "src/kevm_pyk/kproj" ]

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = "src/kevm_pyk/kproj"

[tool.mypy]
disallow_untyped_defs = true
exclude = "src/kevm_pyk/kproj/*"
