[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevm-pyk"
version = "1.0.873"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frozendict>=2.4.6,<3",
    "kframework==7.1.299",
    "pathos",
    "tomlkit>=0.11.6",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
kevm = "kevm_pyk.__main__:main"
kevm-pyk = "kevm_pyk.__main__:main"
kevm-kdist = "pyk.kdist.__main__:main"
gst-to-kore = "kevm_pyk.gst_to_kore:main"

[project.entry-points.kdist]
evm-semantics = "kevm_pyk.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120
skip = [ "src/kevm_pyk/kproj" ]

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
exclude = [ "src/kevm_pyk/kproj" ]

[tool.black]
line-length = 120
skip-string-normalization = true
exclude = "src/kevm_pyk/kproj"

[tool.mypy]
disallow_untyped_defs = true
exclude = "src/kevm_pyk/kproj/*"
