[metadata]
name = kevm_pyk
version = 0.0.1

[options]
python_requires = >= 3.8.*
packages = find:
package_dir =
    =src
install_requires =
    pyk @ git+https://github.com/runtimeverification/k.git@v5.3.136#subdirectory=pyk

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kevm-pyk = kevm_pyk.__main__:main

[mypy]

[flake8]
ignore = E501

[isort]
multi_line_output=3
include_trailing_comma=true
ensure_newline_before_comments=true
